--- a/Docs/datasets/CCFD0-Credit_Card_Fraud_Detection.ipynb
+++ b/Docs/datasets/CCFD0-Credit_Card_Fraud_Detection.ipynb
@@ -25,17 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "olac_base",
    "language": "python",
-   "name": "python3"
+   "name": "olac_base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -47,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
