New notebook to define dynamicity metrics

--- a/olac/notebooks/Untitled.ipynb
+++ b/olac/notebooks/Untitled.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dynamicity metrics - LAC\n",
+    "Define a set of metric that captures the level of Dynamicity\n",
+    "\n",
+    "## Goal\n",
+    "Define computationally effective \n",
+    "## Shorlist\n",
+    "- first, second moment\n",
+    "- volatility\n",
+    "- distribution fit:\n",
+    "    - KL divergence\n",
+    "    - KS test\n",
+    "- Linear regression\n",
+    "    - $R^2$\n",
+    "    - Mean Square Error\n",
+    "    - ...\n",
+    "\n",
+    "## Data\n",
+    "https://datamarket.com/data/set/237v/daily-foreign-exchange-rates-31-december-1979-31-december-1998#!ds=237v!2jx6&display=line"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -10,9 +34,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "olac_base",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "olac_base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
