notebook with the naivelabeler is implemented. and class implemented in development

--- a/notebooks/jdp-pipeline_cost_label_integration.ipynb
+++ b/notebooks/jdp-pipeline_cost_label_integration.ipynb
@@ -109,83 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ThresholdLabeller(olac.pipeline.LabellerBase):\n",
-    "    \"\"\"A simple labeller. Once the number of points in the\n",
-    "    pipeline.labelling_queue reaches a certain threshold, all points are\n",
-    "    retrieved. Points are then randomly labelled with a certain probability.\n",
-    "\n",
-    "    The total number of labels purchased is tracked using an internal\n",
-    "    counter property. This could be used for budgeting.\n",
-    "\n",
-    "    \"\"\"\n",
-    "    def __init__(self, threshold, prob):\n",
-    "        \"\"\"\n",
-    "\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        threshold: The minimum number of points to trigger a batch of labelling\n",
-    "        prob: The probability with which each point will recieve a label.\n",
-    "        \"\"\"\n",
-    "        self.threshold = threshold\n",
-    "        self.prob = prob\n",
-    "\n",
-    "        self.labels_bought = 0\n",
-    "\n",
-    "    def buy_labels_condition(self, pipeline,):\n",
-    "        \"\"\"Buy labels if the labelling_queue is longer than the threshold.\"\"\"\n",
-    "        n = pipeline.labelling_queue.qsize()\n",
-    "        if n > self.threshold:\n",
-    "            print(f'Labeller:\\tThreshold met, {n} new points avaible in queue')\n",
-    "            return True\n",
-    "        else:\n",
-    "            return False\n",
-    "\n",
-    "    def buy_labels(self, pipeline,):\n",
-    "        \"\"\"Get all the points from the labelling queue and label them with\n",
-    "        some probability. \"\"\"\n",
-    "        labelled_points = []\n",
-    "        unlabelled_points = []\n",
-    "\n",
-    "        # Get all the points from the queue (queue will now be empty)\n",
-    "        points = pipeline.labelling_queue.get_all()\n",
-    "\n",
-    "        for point in points:\n",
-    "            # self.prob percent chance of being labelled\n",
-    "            if np.random.uniform(0, 1) < self.prob:\n",
-    "                self.labels_bought += 1\n",
-    "                labelled_points.append(point)\n",
-    "            else:\n",
-    "                unlabelled_points.append(point)\n",
-    "\n",
-    "        print(f'Labeller:\\tLabelled {len(labelled_points)} new points')\n",
-    "\n",
-    "        return labelled_points, unlabelled_points\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class NaieveLabeller(olac.pipeline.LabellerBase):\n",
-    "    \"\"\"A simple labeller. Once the number of points in the\n",
-    "    pipeline.labelling_queue reaches a certain threshold, all points are\n",
-    "    retrieved. Points are then randomly labelled with a certain probability.\n",
-    "\n",
-    "    The total number of labels purchased is tracked using an internal\n",
-    "    counter property. This could be used for budgeting.\n",
+    "    \"\"\" A Naieve \n",
     "\n",
     "    \"\"\"\n",
     "    def __init__(self, threshold, decider, decider_args=tuple(), decider_kwargs=dict()):\n",
