Somewhat formal write-up of my thoughts on the lac pipeline

--- a/Docs/approach/tex/clusters.tex
+++ b/Docs/approach/tex/clusters.tex
@@ -1,7 +1,7 @@
 \subsubsection*{Information K-means}
 For each block of time $t$, $t \in \mathbb{Z}$, the newly observed data is compared to the historical data and evaluate whether the number of clusters needs to be adjusted.\\
-Let $k_{t} = G(\textbf{f})$; where $g$ is a function that approximates the optimal number of clusters.
-Let $\mathcal{K}_{t} = F(k_{t}, \textbf{X})$ where $F$ is the K-means algorithm that approximates the optimal centroid location and assignment of data points.\\
+Let $k_{t} = f(\textbf{f})$; where $g$ is a function that approximates the optimal number of clusters.
+Let $\mathcal{K}_{t} = f(k_{t}, \textbf{X})$ where $f$ is the K-means algorithm that approximates the optimal centroid location and assignment of data points.\\
 
 \noindent\textit{cluster assignment}:
 \begin{equation}
