--- a/Docs/approach/tex/intro.tex
+++ b/Docs/approach/tex/intro.tex
@@ -1,11 +1,10 @@
 Compute the optimal allocation of labels acquisitions that maximize, under resource constraints, long run utility.\\
 
-Throughout this document the following notation will be used:\\
+Throughout this document the following notation will be used unless convention or availability dictate otherwise:\\
 
 \textit{Let} $a$ \textit{indicate a scaler}.\\
 \textit{Let} $\alpha$ \textit{indicate a vector}.\\
 \textit{Let} $\mathbf{a}$ \textit{indicate a vector}.\\
-\textit{Let} $A$ \textit{indicate a function}.\\
 \textit{Let} $\mathbf{A}$ \textit{indicate a matrix}.\\
 \textit{Let} $\mathcal{A}$ \textit{indicate a cluster}.
 
