Additions to approach doc and start of OLAC pipeline

--- a/Docs/approach/tex/lac.tex
+++ b/Docs/approach/tex/lac.tex
@@ -2,6 +2,10 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amssymb}
 \usepackage{amsmath}
+  {
+      \theoremstyle{plain}
+      \newtheorem{assumption}{Assumption}
+  }
 \usepackage{mathtools}
 \usepackage[english]{babel} % English language/hyphenation
 
