--- a/notebooks/jdp-clustering-comparison.ipynb
+++ b/notebooks/jdp-clustering-comparison.ipynb
@@ -44,7 +44,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/johnpaton/jads/olac/olac/utils.py:53: UserWarning: The 'utils.rotation_matrix' method is deprecated, use maths.rotation_matrix(theta: float) instead\n",
+      "/Users/rurlus/Projects/JADS/olac/olac/utils.py:53: UserWarning: The 'utils.rotation_matrix' method is deprecated, use maths.rotation_matrix(theta: float) instead\n",
       "  warnings.warn(\"The 'utils.rotation_matrix' method is deprecated, \"\n"
      ]
     }
@@ -56,6 +56,107 @@
     "rw1 = np.array(list(olac.data_generators.rand_walk(steps=1000)))\n",
     "rw2 = np.array(list(olac.data_generators.rand_walk(steps=1000)))\n",
     "rw = np.hstack([rw1, rw2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from olac.clusterers import DBShift"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1001, 2)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rb.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rbs = rb[:901, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rsf = rb[901:, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = DBShift()\n",
+    "clusters = clf.fit_predict(rbs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 4, 5, 0, 4, 5, 4, 4, 0, 5, 5, 5, 4, 4, 5, 4, 4, 4, 4, 4, 4, 5,\n",
+       "       0, 0, 1, 5, 4, 4, 1, 0, 4, 5, 4, 5, 4, 5, 5, 5, 4, 4, 4, 0, 0, 5,\n",
+       "       4, 5, 5, 4, 5, 5, 0, 0, 5, 5, 5, 5, 0, 4, 4, 4, 4, 5, 0, 4, 0, 4,\n",
+       "       5, 4, 4, 4, 4, 4, 4, 4, 1, 5, 1, 5, 4, 5, 4, 4, 4, 5, 4, 4, 5, 4,\n",
+       "       5, 4, 4, 5, 0, 5, 4, 5, 4, 4, 1, 0])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.predict(rsf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(clusters)"
    ]
   },
   {
